# report

./: .gitignore  README.md  pyproject.toml
examples/templates/: aaa-begin.tex.j2  aaa-packages.tex.j2  main.tex.j2  metody.tex.j2  strati.tex.j2  title.tex.j2  zadani.tex.j2  zaver.tex.j2  zzz-end.tex.j2
src/report/: config_loader.py  latex_compiler.py  main.py  sections.py  template_renderer.py
src/report/config/: app_config.toml  logger.py  report_config.toml
src/report/templates/: report_template.tex
src/reptex/: compiler.py  latex_compiler.py  main.py  renderer.py  report.py  section.py  sections.py  sections_example.py  template_renderer.py
src/reptex/config/: app_config.toml  config.py  logger.py  report_config.toml
tests/: test_compiler.py  test_renderer.py
