[project]
name = "reptex"
version = "0.1.0"
description = "Automated report generator with LaTeX and Jinja2"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "ffsedd", email = "ffsedd@gmail.com" }]

dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
]

[project.scripts]
reptex = "reptex.main:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 99
target-version = ['py310']

[tool.ruff]
line-length = 99
extend-select = ["I", "B", "C4"]
src = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
files = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true



[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.4.0",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ipykernel",
]
